// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array without keys deference array 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": ConstRef {
            "kind": "constref",
            "name": "foo",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": OffsetLookup {
              "kind": "offsetlookup",
              "offset": Number {
                "kind": "number",
                "value": "1",
              },
              "what": Call {
                "arguments": Array [],
                "kind": "call",
                "what": PropertyLookup {
                  "kind": "propertylookup",
                  "offset": ConstRef {
                    "kind": "constref",
                    "name": "bar",
                  },
                  "what": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "foo",
                  },
                },
              },
            },
            "what": Call {
              "arguments": Array [
                Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "foo",
                },
              ],
              "kind": "call",
              "what": Array {
                "items": Array [
                  Entry {
                    "key": null,
                    "kind": "entry",
                    "value": String {
                      "isDoubleQuote": true,
                      "kind": "string",
                      "raw": "\\"a\\"",
                      "value": "a",
                    },
                  },
                  Entry {
                    "key": null,
                    "kind": "entry",
                    "value": String {
                      "isDoubleQuote": true,
                      "kind": "string",
                      "raw": "\\"b\\"",
                      "value": "b",
                    },
                  },
                ],
                "kind": "array",
                "shortForm": true,
              },
            },
          },
        },
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys mixed tests / coverage test empty array 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": Array {
        "items": Array [
          null,
        ],
        "kind": "array",
        "shortForm": true,
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "operator": "=",
      "right": Array {
        "items": Array [
          null,
        ],
        "kind": "array",
        "shortForm": false,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys mixed tests / coverage test short form / keys 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": Number {
            "kind": "number",
            "value": "0",
          },
          "kind": "entry",
          "value": Variable {
            "byref": true,
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
        Entry {
          "key": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "bar",
          },
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"foobar\\"",
            "value": "foobar",
          },
        },
      ],
      "kind": "array",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of arrays 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": Array {
            "items": Array [
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item1\\"",
                  "value": "item1",
                },
              },
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item2\\"",
                  "value": "item2",
                },
              },
            ],
            "kind": "array",
            "shortForm": false,
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Array {
            "items": Array [
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item3\\"",
                  "value": "item3",
                },
              },
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item4\\"",
                  "value": "item4",
                },
              },
            ],
            "kind": "array",
            "shortForm": false,
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Array {
            "items": Array [
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item5\\"",
                  "value": "item5",
                },
              },
              Entry {
                "key": null,
                "kind": "entry",
                "value": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"item6\\"",
                  "value": "item6",
                },
              },
            ],
            "kind": "array",
            "shortForm": false,
          },
        },
      ],
      "kind": "array",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of numbers 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": Number {
            "kind": "number",
            "value": "1",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Number {
            "kind": "number",
            "value": "2.5",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Number {
            "kind": "number",
            "value": "0x1000",
          },
        },
      ],
      "kind": "array",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of objects 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": New {
            "arguments": Array [],
            "kind": "new",
            "what": Identifier {
              "kind": "identifier",
              "name": "foo",
              "resolution": "uqn",
            },
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": New {
            "arguments": Array [],
            "kind": "new",
            "what": Identifier {
              "kind": "identifier",
              "name": "stdClass",
              "resolution": "uqn",
            },
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": New {
            "arguments": Array [],
            "kind": "new",
            "what": Identifier {
              "kind": "identifier",
              "name": "bar",
              "resolution": "uqn",
            },
          },
        },
      ],
      "kind": "array",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of strings 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"item1\\"",
            "value": "item1",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"item2\\"",
            "value": "item2",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"item3\\"",
            "value": "item3",
          },
        },
      ],
      "kind": "array",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of strings and numbers 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": Number {
            "kind": "number",
            "value": "1",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"item2\\"",
            "value": "item2",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Number {
            "kind": "number",
            "value": "3",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"item4\\"",
            "value": "item4",
          },
        },
      ],
      "kind": "array",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Array without keys of variables 1`] = `
Program {
  "children": Array [
    Array {
      "items": Array [
        Entry {
          "key": null,
          "kind": "entry",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj1",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj2",
          },
        },
        Entry {
          "key": null,
          "kind": "entry",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj3",
          },
        },
      ],
      "kind": "array",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
